--- a/static/partials/nav.html
+++ b/static/partials/nav.html
@@ -2,23 +2,23 @@
     <ul class="nav-menu-mobile__list">
         <li class="nav-menu-mobile__item">
             <i class="nav-menu-mobile__item-icon nav-menu-mobile__item-icon_gallery"></i>
-            <span class="nav-menu-mobile__item-text">Gallery</span>
+            <span class="nav-menu-mobile__item-text">{{'NAV_MENU_GALLERY_SHORT' | translate}}</span>
         </li>
         <li class="nav-menu-mobile__item nav-menu-mobile__item_selected">
             <i class="nav-menu-mobile__item-icon nav-menu-mobile__item-icon_how-it-works"></i>
-            <span class="nav-menu-mobile__item-text">FAQ</span>
+            <span class="nav-menu-mobile__item-text">{{'NAV_MENU_HOW_IT_WORKS_SHORT' | translate}}</span>
         </li>
         <li class="nav-menu-mobile__item">
             <i class="nav-menu-mobile__item-icon nav-menu-mobile__item-icon_workspace"></i>
-            <span class="nav-menu-mobile__item-text">Work</span>
+            <span class="nav-menu-mobile__item-text">{{'NAV_MENU_STITCH_SHORT' | translate}}</span>
         </li>
         <li class="nav-menu-mobile__item">
             <i class="nav-menu-mobile__item-icon nav-menu-mobile__item-icon_globe"></i>
-            <span class="nav-menu-mobile__item-text">Language</span>
+            <span class="nav-menu-mobile__item-text">{{'NAV_MENU_LANGUAGE' | translate}}</span>
         </li>
         <li class="nav-menu-mobile__item">
             <i class="nav-menu-mobile__item-icon nav-menu-mobile__item-icon_man"></i>
-            <span class="nav-menu-mobile__item-text">Me</span>
+            <span class="nav-menu-mobile__item-text">{{'NAV_MENU_ME' | translate}}</span>
         </li>
     </ul>
 </nav>
@@ -27,15 +27,15 @@
     <div class="nav-menu-desktop__container-fluid">
         <div class="nav-menu-desktop__container-fixed-width">
             <ul class="nav-menu-desktop__list">
-                <li class="nav-menu-desktop__item"><i class="nav-menu-desktop__item-icon nav-menu-desktop__item-icon_gallery"></i><span class="nav-menu-desktop__item-text">Gallery</span></li>
-                <li class="nav-menu-desktop__item nav-menu-desktop__item_selected"><i class="nav-menu-desktop__item-icon nav-menu-desktop__item-icon_how-it-works"></i><span class="nav-menu-desktop__item-text">How it works</span></li>
-                <!--                    <li class="nav-menu-desktop__item"><i class="nav-menu-desktop__item-icon nav-menu-desktop__item-icon_workspace"></i><span class="nav-menu-desktop__item-text">Workspace</span></li>-->
-                <li class="nav-menu-desktop__item"><i class="nav-menu-desktop__item-icon nav-menu-desktop__item-icon_globe"></i><span class="nav-menu-desktop__item-text">Language</span></li>
+                <li class="nav-menu-desktop__item"><i class="nav-menu-desktop__item-icon nav-menu-desktop__item-icon_gallery"></i><span class="nav-menu-desktop__item-text">{{'NAV_MENU_GALLERY' | translate}}</span></li>
+                <li class="nav-menu-desktop__item nav-menu-desktop__item_selected"><i class="nav-menu-desktop__item-icon nav-menu-desktop__item-icon_how-it-works"></i><span class="nav-menu-desktop__item-text">{{'NAV_MENU_HOW_IT_WORKS' | translate}}</span></li>
+                <li class="nav-menu-desktop__item"><i class="nav-menu-desktop__item-icon nav-menu-desktop__item-icon_workspace"></i><span class="nav-menu-desktop__item-text">{{'NAV_MENU_STITCH' | translate}}</span></li>
+                <li class="nav-menu-desktop__item"><i class="nav-menu-desktop__item-icon nav-menu-desktop__item-icon_globe"></i><span class="nav-menu-desktop__item-text">{{'NAV_MENU_LANGUAGE' | translate}}</span></li>
                 <li class="nav-menu-desktop__splitter"></li>
                 <li class="nav-menu-desktop__login">
-                    <span class="nav-menu-desktop__login-text">Log in</span></li>
+                    <span class="nav-menu-desktop__login-text">{{'NAV_MENU_LOGIN' | translate}}</span></li>
                 <li class="nav-menu-desktop__login">
-                    <span class="nav-menu-desktop__login-text">Sign up</span>
+                    <span class="nav-menu-desktop__login-text">{{'NAV_MENU_SIGNUP' | translate}}</span>
                 </li>
             </ul>
         </div>
