--- a/static/partials/language.html
+++ b/static/partials/language.html
@@ -1,21 +1,13 @@
 <div ng-include="'partials/nav.html'" class="site__header"></div>
 <div class="site__content">
     <div class="language-menu">
-        <div class="language-menu__close-button"><i class="language-menu__close-button-icon"></i></div>
+<!--        <div class="language-menu__close-button"><i class="language-menu__close-button-icon"></i></div>-->
         <ul class="language-menu__list">
             <a href ui-sref="app.language({lang: language.locale})" ng-repeat="language in languages">
             <li class="language-menu__item">
                 <span class="language-menu__item-text" ng-class="{'language-menu__item-text_selected': language.locale === activeLang}">{{language.foreign}} - {{language.native}}</span>
             </li>
             </a>
-<!--            <li class="language-menu__item"><span class="language-menu__item-text language-menu__item-text_selected">English - English</span></li>
-            <li class="language-menu__item"><span class="language-menu__item-text">Russian - Русский</span></li>
-            <li class="language-menu__item"><span class="language-menu__item-text">Italian - Italiano</span></li>
-            <li class="language-menu__item"><span class="language-menu__item-text">Spanish - Español</span></li>
-            <li class="language-menu__item"><span class="language-menu__item-text">French - Français</span></li>
-            <li class="language-menu__item"><span class="language-menu__item-text">Portugal - Português</span></li>
-            <li class="language-menu__item"><span class="language-menu__item-text">Deutsch - Deutsch</span></li>
-            <li class="language-menu__item"><span class="language-menu__item-text">Turkish - Türkçe</span></li>-->
         </ul>
     </div>
 </div>
